# Piler

./: .gitignore
api/: -POST  -XPOST  Piler.cabal  README.md  istorii.txt  sqlite.db  stack.yaml
api/app/: Main.hs
api/shell/: test.sh
api/src/: App.hs  AuthApi.hs  JsonModel.hs  MainApi.hs  MedicamentApi.hs  Model.hs  TickTack.hs  TreatmentApi.hs  TreatmentPlanApi.hs  Utils.hs  istorii.txt
api/src/Api/: .#AuthApi.hs  Admin.hs  Auth.hs  AuthJWT.hs  Device.hs  Main.hs  Medicament.hs  Roles.hs  Shopping.hs  Treatment.hs  User.hs
api/src/Model/: Model.hs  SecretKeyPurpose.hs  UserStatus.hs
api/src/Services/: TickTack.hs
api/test/: AuthJWTSpec.hs  MedicamentSpec.hs  MedicamentsSpec.hs  ShoppingSpec.hs  Spec.hs  TreatmentSpec.hs  UserSpec.hs  proof.agda  proof.agdai
api/test/shell/: .#test.sh  .#uc1.sh  test.sh  uc1.sh  uc2.sh
front/: bower.json  package.json  webpack.config.js
front/src/: App.purs  Config.purs  HomePage.purs  Login.purs  LoginPage.purs  Main.purs  Medicaments.purs  Routes.purs
front/src/HomePage/: Effects.purs  State.purs
front/src/HomePage/Components/: DeviceComponent.purs  NavigationComponent.purs  ShoppingComponent.purs  TreatmentComponent.purs
front/src/Login/: App.purs
front/src/Types/: Device.purs  DeviceStatus.purs  DeviceStorage.purs  FullTreatmentPlan.purs  Login.purs  Medicament.purs  Register.purs  Treatment.purs  TreatmentPlan.purs  TreatmentPlanRow.purs  User.purs
front/src/Utils/: Form.js  Form.purs  Other.purs  Request.purs
front/static/: index.html
iot/client/: LICENSE  client.cabal  config.txt  stack.yaml
iot/client/app/: Main.hs
iot/client/src/: App.hs  Cli.hs  Server.hs  Types.hs  Utils.hs
iot/main/: main.ino
iot/main2/: README.md  blink.ino  main2.cabal  stack.yaml
iot/main2/src/: Main.hs
mobile/: gradle.properties
mobile/app/: build.gradle  proguard-rules.pro
mobile/app/src/androidTest/java/com/example/helloactivities/: ExampleInstrumentedTest.java
mobile/app/src/main/: AndroidManifest.xml
mobile/app/src/main/frege/com/example/helloactivities/: LoginActivity.fr  MainActivity.fr  Net.fr  State.fr  Utils.fr
mobile/app/src/main/res/layout/: activity_login.xml  activity_main.xml
mobile/app/src/main/res/values/: strings.xml
mobile/app/src/test/java/com/example/helloactivities/: ExampleUnitTest.java
