name:                Piler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Piler#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MainApi
                     , Model
                     , MedicamentApi
                     , AuthApi
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , servant
                     , containers
                     , bytestring
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-types
                     , http-types
                     , monad-logger
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , servant-server
                     , string-conversions
                     , text
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010


executable Piler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fpackage-trust
  build-depends:       base
                     , Piler
  default-language:    Haskell2010

test-suite Piler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:     MedicamentsSpec
  build-depends:       base
                     , Piler
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
                     , bytestring
                     , http-types
                     , wai-extra
                     , string-conversions
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Piler
