name:                Piler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zelinskiy/Piler
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src, test
  exposed-modules:     App
                     , Model
                     , JsonModel
                     , Utils
                     , Services.TickTack
                     , Api.Main
                     , Api.Auth
                     , Api.AuthJWT
                     , Api.Medicament
                     , Api.Treatment
                     , Api.Device
                     , Api.User

                     , MedicamentSpec
                     , TreatmentSpec
                     , AuthJWTSpec
                     , UserSpec
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , deepseq
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-conduit
                     , http-types
                     , monad-control
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , process
                     , resourcet
                     , servant
                     , servant-auth
                     , servant-auth-server
                     , servant-server
                     , string-conversions
                     , text
                     , time
                     , transformers
                     , wai
                     , wai-extra
                     , warp
                     , word8
  default-language:    Haskell2010


executable Piler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       Piler
                     , base
  default-language:    Haskell2010

test-suite Piler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, app
  main-is:             Spec.hs
  other-modules:       MedicamentSpec
                     , TreatmentSpec
                     , AuthJWTSpec
                     , UserSpec
  build-depends:       Piler
                     , aeson
                     , base
                     , bytestring
                     , deepseq
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-types
                     , monad-control
                     , mtl
                     , persistent-sqlite
                     , process
                     , resourcet
                     , servant-server
                     , string-conversions
                     , time
                     , transformers
                     , wai
                     , wai-extra
                     , word8
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zelinskiy/Piler
