name:                main2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zelinskiy/main2#readme
license:             BSD3
license-file:        LICENSE
author:              zelinskiy
maintainer:          zelinskiy1917@gmail.com
copyright:           CC BY-NC-SA
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable main2
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , haskino >= 0.6
                     , ghc >= 8.0.2
  ghc-options: -Wall -threaded -fplugin=System.Hardware.Haskino.ShallowDeepPlugin
